--- a/CSRazorSolution/WebApp/Pages/Privacy.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Privacy.cshtml
@@ -4,5 +4,14 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
+ <p>Use this page to detail your site's privacy policy.</p>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>Credits and attributions</h2>
+<p> Logo and thumbnail image from <a href="https://www.vecteezy.com/free-vector/vector">Vectors by vecteezy</a>. No copyright infrigment is intended.The image is used for educational purpose</p>
+
+<h3>Copyright info</h3>
+<img src="~/img/Copyright-Protected-work.png" alt="copyright info"/>
+
+<h3>
+    <a href ="https://support.google.com/legal/answer/4558992?h1=en&ref_topic=4558877">What is Fair Use?</a>
+</h3>
